--- a/mobile.css
+++ b/mobile.css
@@ -96,10 +96,24 @@
     #check:checked ~ .menu {
       right: 0;
     }
-.comtaner-carousell{
-    display: flex;
-    width: 420px;
-    height: 200px;
+
+    .container-carousell {
+        display: flex;
+        flex-direction: column;
+        height: 200px;
+        position: relative;
+        width: 400px;
+      
+        border: 3px solid rgb(202, 196, 196);
+      }
+/* h2{
+    font-size: 1em;
+} */
+.button-item{
+  
+    width: 300px;
+    height: 150px;
+    
 }
   .icon-container > img{
     display: inline-flex;
@@ -126,10 +140,7 @@
     .head {
       font-size: 15px;
     }
-    .container-carousell {
-      width: 1000px;
-      height: 2000px;
-    }
+   
     .grid-container {
       display: flex;
     }
