--- a/carousell.css
+++ b/carousell.css
@@ -12,9 +12,9 @@
 } */
 
 .container-carousell {
-  height: 900px;
+  height:   40vw;
   position: relative;
-  width: 100%;
+  width: 80vw;
   display: block;
   margin: 0px auto;
   border: 3px solid lightgrey;
