--- a/mobile.css
+++ b/mobile.css
@@ -25,6 +25,7 @@
     display:flex;
     flex-direction: row;
     gap: 20px;
+    margin-top: 10px ;
     }
 
 
@@ -99,16 +100,53 @@
       right: 0;
     }
 
-    .container-carousell {
-        height: 900px;
+
+    .container-carousell .button-item    {
+        margin-right: 10px;
+        height: 29vw;
         position: relative;
-        width: 100%;
-        display: none;
-        margin: 0px auto;
-        border: 3px solid lightgrey;
+        width: 57vw;
+        overflow: hidden;
+          
+      }  
+      .logo{
+        justify-content: center;
+        gap: 30px;
       }
-h2{
-    font-size: 5px;
+.logo img{
+    width: 15px;
+    height: 15px;
+    
+    align-items: center;
+
+}
+
+/* .grid-container .grid-item {
+display: flex;
+    width: 300px;
+    height: 300px;
+flex-direction: column;
+} */
+.grid-item .designer{
+    font-size: 20px;
+}
+
+.grid-container > .grid-item{
+    display: grid;
+    width: 150px;
+    height: 300px;
+
+}
+
+.grid-container .grid-item img{
+    display: grid;
+    grid-row: 200px 200px;
+    gap: 10px;
+}
+
+.team-design{
+   
+    font-size: 2em  ;
 }
 .button-item{
     width: 300px;
