--- a/grid.css
+++ b/grid.css
@@ -1,7 +1,7 @@
 .grid-container {
   margin-top: 100px;
   display: grid;
-  grid-template-columns: 300px 300px 300px 300px;
+  grid-template-columns: 15vw 15vw 15vw 15vw;
   gap: 90px;
   justify-content: center;
   margin-bottom: 100px;
@@ -30,6 +30,7 @@
 }
 
 h2 {
+  display: block;
   margin-top: 40px;
   font-family: "Italiana";
   font-size: 6em;
