--- a/grid.css
+++ b/grid.css
@@ -1,10 +1,11 @@
 .grid-container {
-  margin-top: 100px;
+  /* margin-top: 100px; */
   display: grid;
-  grid-template-columns: 15vw 15vw 15vw 15vw;
-  gap: 90px;
+  grid-template-columns: 20vw 15vw 20vw 15vw;
+  gap: 20px;
   justify-content: center;
-  margin-bottom: 100px;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 .grid-item {
@@ -17,7 +18,6 @@
   height: 100%;
   object-fit: cover;
   border-radius: 25px;
-  border: 10px;
   opacity: 30%;
   transition-duration: 2s;
   transition: transform 1s ease-in-out;
@@ -26,7 +26,7 @@
 .grid-item img:hover {
   opacity: 100%;
   transition: opacity 1s ease;
-  transform: scale(1.2);
+  transform: scale(1.5);
 }
 
 h2 {
@@ -40,11 +40,12 @@ h2 {
   text-decoration: underline;}
   
   .designer{
-    display: flex;
-    margin-top: 15px;
+    display: grid;
+    /* margin-top: 15px; */
     font-size: 2rem;
     font-family: "Italiana";
     justify-content: center;
-    margin-bottom: 30px;
+    /* margin-bottom: 20px; */
+    margin-left: 30px;
   }
  
