--- a/headercompany.css
+++ b/headercompany.css
@@ -46,14 +46,24 @@
   transition: 2s;
 }
 
-.logo{
+.logo-sosmed {
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  gap: 1px;
+
+align-items: center;
+
 }
-.logo img {
+
+.logo-sosmed img {
+  margin-top: 40px;
   width: 30px;
+  margin-left: 40px;
+ 
+
   height: 30px;
 }
+
 .head {
   display: flex;
   justify-content: center;
